[package]
name = "next45"
version = "0.1.1"
edition = "2024"
authors = ["Hyphrio <notmynn@proton.me>"]
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6.0", features = ["d1"] }
worker-macros = { version = "0.6.0" }
console_error_panic_hook = { version = "0.1.1" }
twitch_api = { version = "0.7.1", features = ["eventsub", "helix", "client"] }
hmac-sha256 = "1.1.8"
constant_time_eq = "0.4.2"
hex = "0.4.3"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
# twitch_api needs this as well so used getrandom_0_2 to avoid breakage from newer 0_3 libraries.
getrandom_0_2 = { version = "0.2.15", package = "getrandom", features = ["js"] }
http = "1.3.1"
sqlx-d1 = { version = "0.2.0", features = ["macros"] }
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
    "alloc",
] }
twitch_oauth2 = { version = "0.15.2" }
rand = "0.9.2"
web-time = { version = "1.1.0" }
argh = { version = "0.1.13", default-features = false }
thiserror = "2.0.12"
rust_decimal = { version = "1.37.2", features = ["macros", "rand-0_9"] }

# Workers patches not yet published to crates.io
[patch.crates-io]
twitch_oauth2 = { git = "https://github.com/twitch-rs/twitch_oauth2", rev = "95aee71" }
